--- a/style.css
+++ b/style.css
@@ -55,6 +55,21 @@ margin-top: 50px;
 }
 .riaadsince{
     margin-top: 30px;
+ 
+}
+.riaad-verified{
+    position: absolute;
+    border: solid 1px;
+    background-color: white;
+    margin-left:180px;
+    margin-top: 200px;
+    font-weight: bold;
+    height: 10%;
+    
+}
+#get-started{
+    color: rgba(255, 166, 0, 0.979);
+    font-weight: bold;
 }
 
 #riaad-s{
@@ -65,7 +80,7 @@ font-weight: bold;
     font-size: 30px;
 }
 .riaadtext{
-margin-left: 30px;
+margin-left: 10px;
 font-size: 20px;
 }
 .logoipsum{
@@ -80,7 +95,7 @@ font-size: 20px;
 }
 .ourservices{
     text-align: center;
-    margin-top: 300px;
+    margin-top: 150px;
 }
 h2{
     font-size: 50px;
@@ -160,10 +175,16 @@ h3{
     width: 25%;
     height: 15cm;
     margin-left: 110px;
+    margin-right: 10px;
 }
 #choice{
     color: rgba(255, 166, 0, 0.986);
     font-weight: bold;
+}
+#quote{
+    margin-left: 130px;
+    color: blue;
+    font-size: 160%;
 }
 .leading-business{
     display: flex;
@@ -202,15 +223,22 @@ h4{
 #bookus{
     color: orange;
     font-weight: bold;
-  
+    color: white;
+}
+.booknow{
+    background-color: orange;
+    width: 30%;
+    height: 5cm;
+    
 }
 .requestquote{
     border: solid 1px;
     margin-top: 60px;
     display: flex;
+    width: 100%;
 }
 .movingtype{
-    display: flex;
+ 
     padding: 5px;
 }
 .place{
@@ -218,7 +246,7 @@ h4{
     padding: 5px;
 }
 .destination{
-    display: flex;
+
     padding: 5px;
 }
 .form-details{
@@ -228,14 +256,23 @@ h4{
     color: orange;
     font-weight: bold;
 }
+#freequote{
+    font-size: 130%;
+    
+}
 h5{
 font-size: 260%;
 color: rgba(0, 0, 0, 0.856);
 }
 .form{
-    margin-top: 60px;
     margin-left: 60px;
     border:solid 1px;
+    display: flex;
+    background-color: blue;
+    width: 590%;
+    height: 5cm;
+    
+    
 }
 
 
@@ -256,13 +293,14 @@ color: rgba(0, 0, 0, 0.856);
 }
 #email{
     color:blue;
+    font-size: 150%;
 }
 #newsletter{
     color: orange;
     font-weight: bold;
     text-align: center;
     margin-left: 750px;
-    margin-top: 100px;
+    margin-top: 150px;
 
 }
 h6{
@@ -271,9 +309,99 @@ h6{
 }
 .emailaddress{
 display: flex;
-gap: 160px;
+gap: 460px;
 margin-left: 500px;
 }
 #subscribe{
+     background-color: orange;
+    width: 20%;
+
+}
+.usa-movers{
+    display: flex;
+    
+}
+#helping{
+color: orange;
+}
+
+#save{
+    color: orange;
+}
+#surveytext{
+    color: orange;
+}
+#contacttext{
+    color: orange;
+}
+
+#deliveryimg{
+    width: 20%;
+    height: 10cm;
+}
+#movingoutimg{
+    width: 25%;
+    height: 10cm;
+}
+#boxesimg{
+    width: 25%;
+    height: 10cm;
+}
+.vacationimg{
+    word-spacing: 100px;
+    margin-left: 200px;
+}
+.blog{
+    margin-top: 100px;
+    margin-left: 700px;
+}
+#news{
+    font-size: 200%;
+}
+#ourblog{
+    color: orange;
+    font-weight: bold;
+    margin-left: 80px;
+}
+.aid{
+    display: flex;
+    gap: 390px;
+    margin-top: 100px;
+    border: solid 1px;
+    height: 5cm;
+    background-color: orange;
+
+}
+#press{
+    height: 2cm;
+    margin-top: 65px;
+    background-color: black;
+    color: white;
+}
+#people{
+    margin-top:85px ;
+    margin-left: 400px;
+    font-size: 150%;
+    color: white;
+    font-weight: bold;
+}
+.footerlog ul{
+list-style-type: none;
+
+}
+.footerlog{
+    display: flex;
+    gap: 100px;
+    border: solid 1px;
+    background-color: black;
+    color: white;
+    
+}
+.icons{
+    word-spacing: 50px;
+    margin-top: 50px;
+    margin-left: 90px;
+}
+#twitter{
     color: orange;
 }
